--- a/src/sass/settings/components/_navbar.scss
+++ b/src/sass/settings/components/_navbar.scss
@@ -1,4 +1,4 @@
-$navbar-height: 63px;
+$navbar-height: 70px;
 
 $navbar-background-color: $color-dark;
 $navbar-color: $color-light;
